--- a/src/css/styles/_breadcrumbs.scss
+++ b/src/css/styles/_breadcrumbs.scss
@@ -73,8 +73,8 @@
 
 .page--banner {
     .breadcrumbs {
-        border-bottom-color: var(--blue_medium);
-        border-top-color: var(--blue_medium);
+        border-bottom-color: rgba(#fff, 0.3);
+        border-top-color: rgba(#fff, 0.3);
         color: var(--grey_light);
 
         .breadcrumbs__separator {
