--- a/src/css/styles/_catalog.scss
+++ b/src/css/styles/_catalog.scss
@@ -445,6 +445,11 @@
             margin-top: 24px;
         }
 
+        .button--light {
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
+
         .button {
             width: calc(100% / 2 - 16px / 2);
         }
