--- a/src/template/projects-slider.html
+++ b/src/template/projects-slider.html
@@ -54,6 +54,13 @@
                                 <use xlink:href="images/sprite.svg#popup_icon" />
                             </svg>
                         </button>
+
+                        <button class="button button--dark button--h_56" type="button" data-fancybox="request_project_card_1_1" data-src="#request">
+                            <svg aria-hidden="true">
+                                <use xlink:href="images/sprite.svg#report_icon" />
+                            </svg>
+                            <span>Заказать проект</span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -115,6 +122,13 @@
                             <svg aria-hidden="true">
                                 <use xlink:href="images/sprite.svg#popup_icon" />
                             </svg>
+                        </button>
+
+                        <button class="button button--dark button--h_56" type="button" data-fancybox="request_project_card_2_1" data-src="#request">
+                            <svg aria-hidden="true">
+                                <use xlink:href="images/sprite.svg#report_icon" />
+                            </svg>
+                            <span>Заказать проект</span>
                         </button>
                     </div>
                 </div>
