--- a/src/template/request_form.html
+++ b/src/template/request_form.html
@@ -46,6 +46,10 @@
                     </svg>
                     <span>Отправить заявку</span>
                 </button>
+
+                <div class="request-form__note">
+                    Нажимая на кнопку «Оставить заявку», вы соглашаетесь с <a href="#" target="_blank">Политикой конфиденциальности</a>
+                </div>
             </form>
         </div>
     </div>
