--- a/src/template/why-we.html
+++ b/src/template/why-we.html
@@ -1,106 +1,111 @@
-<div class="why-slider slider slider--type_1 desktop-hidden">
-    <div class="js-why-slider swiper" data-slider="why_slider">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
-                <div class="m-why">
-                    <h3 class="m-why__title">
-                        <svg aria-hidden="true">
-                            <use xlink:href="images/sprite.svg#code_icon" />
-                        </svg>
+<div class="why-slider desktop-hidden">
+    <h2>Почему выбирают нас?</h2>
 
-                        <span>Полный цикл разработки</span>
-                    </h3>
+    <div class="slider slider--type_1">
+        <div class="js-why-slider swiper" data-slider="why_slider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="m-why">
+                        <h3 class="m-why__title">
+                            <svg aria-hidden="true">
+                                <use xlink:href="images/sprite.svg#code_icon" />
+                            </svg>
 
-                    <p>Мы предлагаем гибкие условия оплаты разработки игры, чтобы сделать инвестиции комфортными для вашего бизнеса.</p>
+                            <span>Полный цикл разработки</span>
+                        </h3>
 
-                    <img src="images/content/content_blocks/img.png" srcset="images/content/content_blocks/img@2x.png 2x" alt="">
+                        <p>Мы предлагаем гибкие условия оплаты разработки игры, чтобы сделать инвестиции комфортными для вашего бизнеса.</p>
+
+                        <img src="images/content/content_blocks/img.png" srcset="images/content/content_blocks/img@2x.png 2x" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide">
+                    <div class="m-why">
+                        <h3 class="m-why__title">
+                            <svg aria-hidden="true">
+                                <use xlink:href="images/sprite.svg#team_icon" />
+                            </svg>
+
+                            <span>Опытная команда</span>
+                        </h3>
+
+                        <p>Enim officia eaque, repellendus, sequi explicabo est odit ab voluptate, vel quae minima quas minus fugit hic molestiae debitis doloremque omnis consectetur.</p>
+
+                        <img src="images/content/content_blocks/img_9.png" srcset="images/content/content_blocks/img_9@2x.png 2x" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide">
+                    <div class="m-why">
+                        <h3 class="m-why__title">
+                            <svg aria-hidden="true">
+                                <use xlink:href="images/sprite.svg#rub_icon" />
+                            </svg>
+
+                            <span>Беспроцентная рассрочка</span>
+                        </h3>
+
+                        <p>Мы предлагаем гибкие условия оплаты разработки игры, чтобы сделать инвестиции комфортными для вашего бизнеса.</p>
+
+                        <img src="images/content/content_blocks/img_2.png" srcset="images/content/content_blocks/img_2@2x.png 2x" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide">
+                    <div class="m-why">
+                        <h3 class="m-why__title">
+                            <svg aria-hidden="true">
+                                <use xlink:href="images/sprite.svg#gamepad_icon" />
+                            </svg>
+
+                            <span>Большой спектр услуг</span>
+                        </h3>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem tenetur a harum sequi nobis fugit molestias, quae non, labore dicta quis commodi quos vero. Magni exercitationem minima soluta consequatur molestias.</p>
+
+                        <img src="images/content/content_blocks/img_8.png" srcset="images/content/content_blocks/img_8@2x.png 2x" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide">
+                    <div class="m-why">
+                        <h3 class="m-why__title">
+                            <svg aria-hidden="true">
+                                <use xlink:href="images/sprite.svg#award_icon" />
+                            </svg>
+
+                            <span>Прозрачность в ведении проекта</span>
+                        </h3>
+
+                        <p>Quidem tenetur a harum sequi nobis fugit molestias, quae non, labore dicta quis commodi quos vero. Magni exercitationem minima soluta consequatur molestias.</p>
+
+                        <img src="images/content/content_blocks/img_9.png" srcset="images/content/content_blocks/img_9@2x.png 2x" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide">
+                    <div class="m-why">
+                        <h3 class="m-why__title">
+                            <svg aria-hidden="true">
+                                <use xlink:href="images/sprite.svg#coop_icon" />
+                            </svg>
+
+                            <span>Наши гарантии</span>
+                        </h3>
+
+                        <p>Magni exercitationem minima soluta consequatur molestias. Quidem tenetur a harum sequi nobis fugit molestias, quae non, labore dicta quis commodi quos vero.</p>
+
+                        <img src="images/content/content_blocks/img.png" srcset="images/content/content_blocks/img@2x.png 2x" alt="">
+                    </div>
                 </div>
             </div>
 
-            <div class="swiper-slide">
-                <div class="m-why">
-                    <h3 class="m-why__title">
-                        <svg aria-hidden="true">
-                            <use xlink:href="images/sprite.svg#team_icon" />
-                        </svg>
-
-                        <span>Опытная команда</span>
-                    </h3>
-
-                    <p>Enim officia eaque, repellendus, sequi explicabo est odit ab voluptate, vel quae minima quas minus fugit hic molestiae debitis doloremque omnis consectetur.</p>
-
-                    <img src="images/content/content_blocks/img_9.png" srcset="images/content/content_blocks/img_9@2x.png 2x" alt="">
-                </div>
-            </div>
-
-            <div class="swiper-slide">
-                <div class="m-why">
-                    <h3 class="m-why__title">
-                        <svg aria-hidden="true">
-                            <use xlink:href="images/sprite.svg#rub_icon" />
-                        </svg>
-
-                        <span>Беспроцентная рассрочка</span>
-                    </h3>
-
-                    <p>Мы предлагаем гибкие условия оплаты разработки игры, чтобы сделать инвестиции комфортными для вашего бизнеса.</p>
-
-                    <img src="images/content/content_blocks/img_2.png" srcset="images/content/content_blocks/img_2@2x.png 2x" alt="">
-                </div>
-            </div>
-
-            <div class="swiper-slide">
-                <div class="m-why">
-                    <h3 class="m-why__title">
-                        <svg aria-hidden="true">
-                            <use xlink:href="images/sprite.svg#gamepad_icon" />
-                        </svg>
-
-                        <span>Большой спектр услуг</span>
-                    </h3>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem tenetur a harum sequi nobis fugit molestias, quae non, labore dicta quis commodi quos vero. Magni exercitationem minima soluta consequatur molestias.</p>
-
-                    <img src="images/content/content_blocks/img_8.png" srcset="images/content/content_blocks/img_8@2x.png 2x" alt="">
-                </div>
-            </div>
-
-            <div class="swiper-slide">
-                <div class="m-why">
-                    <h3 class="m-why__title">
-                        <svg aria-hidden="true">
-                            <use xlink:href="images/sprite.svg#award_icon" />
-                        </svg>
-
-                        <span>Прозрачность в ведении проекта</span>
-                    </h3>
-
-                    <p>Quidem tenetur a harum sequi nobis fugit molestias, quae non, labore dicta quis commodi quos vero. Magni exercitationem minima soluta consequatur molestias.</p>
-
-                    <img src="images/content/content_blocks/img_9.png" srcset="images/content/content_blocks/img_9@2x.png 2x" alt="">
-                </div>
-            </div>
-
-            <div class="swiper-slide">
-                <div class="m-why">
-                    <h3 class="m-why__title">
-                        <svg aria-hidden="true">
-                            <use xlink:href="images/sprite.svg#coop_icon" />
-                        </svg>
-
-                        <span>Наши гарантии</span>
-                    </h3>
-
-                    <p>Magni exercitationem minima soluta consequatur molestias. Quidem tenetur a harum sequi nobis fugit molestias, quae non, labore dicta quis commodi quos vero.</p>
-
-                    <img src="images/content/content_blocks/img.png" srcset="images/content/content_blocks/img@2x.png 2x" alt="">
-                </div>
-            </div>
+            <div class="js-why-slider-pagination slider-pagination swiper-pagination" data-slider="why_slider"></div>
         </div>
-
-        <div class="js-why-slider-pagination slider-pagination swiper-pagination" data-slider="why_slider"></div>
     </div>
 </div>
+
 
 <div class="why-we mobile-hidden content-block content-block--type_1">
     <div class="content-block__image" data-aos-delay="600" data-aos="zoom-in">
